syntax = "proto3";

option go_package = "/api";

package api;

service AuthService {
    rpc Signup(SignupRequest) returns (SignupResponse);
    rpc Login(LoginRequest) returns (LoginResponse);

}

message SignupRequest {
    string FirstName = 1;
    string LastName = 2;
    string Email = 3;
    string Password = 4;
    string MobileNumber = 5;
    string Address = 6;
    string City = 7;
    string State = 8;
    string Country = 9;
    string ZipCode = 10;
    string ProfileImage = 11;
}

message SignupResponse {
    string Message = 1;
    string Token = 2;
}

message LoginRequest {
    string Email = 1;
    string Password = 2;
}

message LoginResponse {
    string Message = 1;
    string Token = 2;
}

message UpdateUserRequest {
    string FirstName = 1;
    string LastName = 2;
    string Email = 3;
    string Password = 4;
    string MobileNumber = 5;
    string Address = 6;
    string City = 7;
    string State = 8;
    string Country = 9;
    string ZipCode = 10;
    string ProfileImage = 11;
}